[package]
name = "sstore"
version = "0.1.0"
authors = ["Pan Yang <yangpan@hyperchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sha3 = "0.8.2"
[dependencies.ewasm_api]
version = "0.11"
default-features = false
features = ["std", "qimalloc"]
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
debug = false